# Sesterl

./: .git-blame-ignore-revs  .gitignore  .gitmodules  .ocamlformat  CHANGELOG.md  Makefile  README.md  dune-project  run-negative-blackbox-tests.sh  run-positive-blackbox-tests.sh  run-test-to-pass.sh  sesterl.opam
.github/workflows/: ci.yml  prepare-new-release-pr.yml  publish-new-release.yml
examples/calc/: rebar.config  sesterl.yaml
examples/echo_server/: README.md  package.yaml  rebar.config  sesterl.yaml
examples/hello_world/: README.md  rebar.config  sesterl.yaml
lib/: Makefile  compile_targets.sh  gen_server.sest  sample_project.sest
lib/sample_project/: package.yaml  sample_project.sest
lib/stdlib/: container.sest  dynamic_supervisor.sest  gen_server.sest  list.sest  package.yaml  raw_map.sest  sample_project.sest  server_util.sest  static_supervisor.sest  supervisor.sest  supervisor_common.sest
src/: Makefile  address.ml  address.mli  assocList.ml  boundID.ml  boundID.mli  configLoader.ml  constants.ml  constructorAttribute.ml  constructorID.ml  constructorID.mli  declarationAttribute.ml  dependencyGraph.ml  dependencyGraph.mli  displayMap.ml  displayMap.mli  documentGenerator.ml  dune  env.ml  env.mli  errors.ml  fileDependencyGraph.ml  fileDependencyGraph.mli  freeID.ml  freeID.mli  githubClient.ml  identifierScheme.ml  identifierScheme.mli  intermediateSyntax.ml  kindStore.ml  kindStore.mli  languageVersion.ml  lexer.mll  list1.ml  list1.mli  list2.ml  list2.mli  logging.ml  main.ml  moduleAttribute.ml  (+44 more)
test/: adt.txt  dune  error01.txt  error_functor.txt  first.txt  functor.txt  functor2.txt  functor3.txt  mod.txt  mod2.txt  mod3.txt  mod_seq.txt  mod_stack.txt  mutrec.txt  mutrec2.txt  poly.txt  run-test-to-pass.sh  send.txt  testIdentifierScheme.ml  testLanguageVersion.ml  testRange.ml  testTypechecker.ml
test/concept/: cell.sest  counter.sest
test/fail/: error01.sest  error_arity.sest  error_coercion.sest  error_coercion2.sest  error_coercion3.sest  error_coercion4.sest  error_coercion5.sest  error_coercion6.sest  error_contradiction.sest  error_cyclic_bar.sest  error_first_class_module.sest  error_freeze.sest  error_functor.sest  error_inference.sest  error_kind.sest  error_kind2.sest  error_kind3.sest  error_kinded_parameter.sest  error_mandatory_parameter.sest  error_mandatory_parameter2.sest  error_mutrec.sest  error_option.sest  error_optional_parameter.sest  error_optional_parameter_unify.sest  error_optional_parameter_unify2.sest  error_recursive_type_parameter.sest  error_recursive_type_parameter2.sest  error_type_cyclic.sest  error_variant.sest  error_with.sest  recursive.sest
test/pass/: adt.sest  arith.sest  coercion.sest  coercion2.sest  container.sest  ctor.sest  ctor_attr.sest  ffi.sest  (+43 more)
(+45 files in other folders)
