(executable
 (name main)
 (flags (-w -3 -bin-annot -thread))
 (libraries menhirLib)
 (preprocess (pps
               ppx_deriving.show
               ))
 )

;; dune requires all the .ml/.mli files to be in the same directory as the jbuild.
;; https://github.com/ocaml/dune/issues/109
;;(copy_files# ./*.{ml,mli})
;;(copy_files  ./*.{mll,mly})

(ocamllex
 (modules lexer))

(menhir
 (modules parser)
 (flags (--table --explain)))
