(executable
  (public_name sesterl)
  (package sesterl)
  (name main)
  (flags (-w -3 -bin-annot -thread))
  (libraries
    menhirLib
    cmdliner
    ocamlgraph
    semver2
    core
    core_unix
    core_unix.filename_unix
    core_unix.sys_unix
    uutf
    yaml
    omd)
  (preprocess
    (pps
      ppx_deriving.show)))

(ocamllex
 (modules lexer))

(menhir
 (modules parser)
 (flags (--table --explain)))
